--- a/wwwroot/css/style.scss
+++ b/wwwroot/css/style.scss
@@ -6,3 +6,4 @@
 @import "../css/SASS/formulario";
 @import "../css/SASS/confirmeDelete";
 @import "../css/SASS/index";
+@import "../css/SASS/componenteComentarios";
